fix [#33581] Vertex Color Layer

vertex colors were added to meshes with no faces whenver exiting/entering editmode, while in vertex paint mode outside of editmode. *(making a really big list of vertex colors!)